formulario do login

--- a/estilos/media-queries.css
+++ b/estilos/media-queries.css
@@ -39,7 +39,7 @@
     }
 
     section#login > div#imagem {
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
     }
@@ -47,5 +47,13 @@
     section#login > div#formulario {
         float: right;
         width: 50%;
+    }
+
+    div#formulario > h1 {
+        font-size: 1.8em;
+    }
+
+    div#formulario > p {
+        font-size: 1.1em;
     }
 }
