--- a/estilos/style.css
+++ b/estilos/style.css
@@ -52,3 +52,13 @@ section#login > div#formulario {
     display: block;
     padding: 10px;
 }
+
+div#formulario > h1 {
+    font-size: 1.3em;
+    text-align: center;
+}
+
+div#formulario > p {
+    font-size: 0.8em;
+    padding: 10px;
+}
