--- a/estilos/style.css
+++ b/estilos/style.css
@@ -53,6 +53,18 @@ section#login > div#formulario {
     padding: 10px;
 }
 
+div.campo {
+    display: block;
+    background-color: #5f2c82;
+    border-radius: 5px;
+    margin: 5px 0px;
+    height: 40px;
+}
+
+div.campo > label {
+    display: none;
+}
+
 div#formulario > h1 {
     font-size: 1.3em;
     text-align: center;
@@ -61,4 +73,43 @@ div#formulario > h1 {
 div#formulario > p {
     font-size: 0.8em;
     padding: 10px;
+}
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 30px;
+    background-color: #49a09d;
+    color: white;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover {
+    background-color: #306967;
+}
+
+form > a.botao {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 30px;
+    background-color: #fafafa;
+    border: 1px solid #49a09d;
+    color: #306967;
+    border-radius: 5px;
+    text-decoration: none;
+    padding-top: 2px;
+    margin-top: 7px;
+}
+
+form > a.botao:hover {
+    background-color: #66dad6;
+}
+
+form > a.botao > span {
+    font-size: .8em;
 }
