--- a/estilos/media-queries.css
+++ b/estilos/media-queries.css
@@ -14,6 +14,7 @@
 
     section#login {
         width: 80vw;
+        height: 280px;
     }
 
     section#login > div#imagem {
@@ -36,6 +37,7 @@
 
     section#login {
         width: 950px;
+        height: 380px;
     }
 
     section#login > div#imagem {
@@ -55,5 +57,6 @@
 
     div#formulario > p {
         font-size: 1.1em;
+        padding: 20px;
     }
 }
